Added jenkins absolute path

--- a/vsftpd.conf
+++ b/vsftpd.conf
@@ -21,7 +21,7 @@ pam_service_name=vsftpd_virtual
 
 ## Home Directory for virtual users
 user_sub_token=$USER
-local_root=/home/vsftpd/$USER
+local_root=/var/lib/jenkins/workspace/qa-gras-delivery-deploy-docker-test/home/vsftpd/$USER
 
 # You may specify an explicit list of local users to chroot() to their home
 # directory. If chroot_local_user is YES, then this list becomes a list of
@@ -40,8 +40,8 @@ hide_ids=YES
 pasv_addr_resolve=NO
 
 ## Enable logging
-xferlog_enable=YES
-xferlog_file=/var/log/vsftpd/vsftpd.log
+##xferlog_enable=YES
+##xferlog_file=/var/log/vsftpd/vsftpd.log
 
 ## Enable active mode
 port_enable=YES
